# web-calendar

./: .gitignore  README.md  client.cpp  server.cpp
build-client-Desktop_Qt_6_6_1_GCC_64bit-Release/: CMakeCache.txt  build.ninja  client_gui  cmake_install.cmake
build-client-Desktop_Qt_6_6_1_GCC_64bit-Release/client_gui_autogen/: deps  moc_predefs.h
build-client-Desktop_Qt_6_6_1_GCC_64bit-Release/client_gui_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_receiverthread.cpp  moc_receiverthread.cpp.d  moc_senderthread.cpp  moc_senderthread.cpp.d
client/: CMakeLists.txt  clientthread.cpp  clientthread.h  mainwindow.cpp  mainwindow.h  readme  receiverthread.cpp  receiverthread.h  senderthread.cpp  senderthread.h  tst_parser.cpp
client/build-client-Desktop_Qt_6_6_1_GCC_64bit-Release/: readmev2
client/build-client-Desktop_Qt_6_6_1_GCC_64bit-Release/build-client-Desktop_Qt_6_6_1_GCC_64bit-Release/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  server
client/build-client-Desktop_Qt_6_6_1_GCC_64bit-Release/build-client-Desktop_Qt_6_6_1_GCC_64bit-Release/client_gui_autogen/: deps  mocs_compilation.cpp
client/build-client-Desktop_Qt_6_6_1_GCC_64bit-Release/build-client-Desktop_Qt_6_6_1_GCC_64bit-Release/client_gui_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_receiverthread.cpp  moc_receiverthread.cpp.d  moc_senderthread.cpp  moc_senderthread.cpp.d
client/build-client-Desktop_Qt_6_6_1_GCC_64bit-Release/build-client-Desktop_Qt_6_6_1_GCC_64bit-Release/server_autogen/: deps  moc_predefs.h
